I#429 - Fix some (rarely) possible dereferences of NULL

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/429